Add container injection via external layers
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>